external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_implies_fail.exp
error[E00002]: DEPRECATED. unexpected spec item
  ┌─ tests/move_check/parser/spec_parsing_implies_fail.move:3:15
  │
3 │       let _ = x ==> x;
  │               ^^^^^^^ Specification blocks are deprecated

