external-crates/move/crates/move-compiler/tests/move_check/parser/spec_parsing_implies_fail.move
module 0x8675309::M {
    fun implies_in_prog() {
      let _ = x ==> x;
    }
}
